<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_alarm_dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">


    <!--Save and Cancel Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/save"
            android:textColor="@color/primary"
            android:textSize="18sp" />
    </LinearLayout>

    <!--Note EditText-->
    <EditText
        android:id="@+id/alarm_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/note"
        android:inputType="text"
        android:maxLines="5"
        android:minLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"></EditText>

    <!--Date & Time Card-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_date"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_time"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>

    <!--Ringtone-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/audio"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/playPauseToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@null"
            android:button="@drawable/play_pause_toggle_selector"
            android:checked="false"
            android:contentDescription="@string/play_pause_toggle_description"
            android:text=""
            android:textOff=""
            android:textOn="" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="center"
            android:padding="0dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/select"></AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Vibrate Switch-->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vibrate_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/vibrate"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:thumbTint="@color/primary"
        tools:ignore="UseSwitchCompatOrMaterialXml">

    </com.google.android.material.switchmaterial.SwitchMaterial>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </View>


</LinearLayout>